@@ -45,6 +45,7 @@
                         --add-opens litebridge.orm/org.litebridgedb.orm.api.select.impl=litebridge.commons
                         --add-opens litebridge.orm/org.litebridgedb.orm.api.select.impl=ALL-UNNAMED
                         --add-opens litebridge.orm/org.litebridgedb.orm.persistence=litebridge.commons
+                        --add-opens litebridge.orm/org.litebridgedb.orm.e2e=ALL-UNNAMED
                         --add-opens litebridge.orm/org.litebridgedb.orm.e2e.setup=ALL-UNNAMED
                         --add-opens litebridge.orm/org.litebridgedb.orm.e2e.basic.dto=litebridge.commons
                         --add-opens litebridge.orm/org.litebridgedb.orm.e2e.basic.dto=litebridge.tracking
@@ -97,6 +98,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.litebridgedb.db</groupId>
+            <artifactId>litebridge-db-sqlite</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <scope>test</scope>
@@ -114,6 +120,11 @@
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc17</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
